2007-12-13  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added "<group>" tag to driver entries. Drivers
	  which differ only by their locales ("<locales>" tag) should have the
	  same "<group>" tags. If the user queries a driver giving a locale
	  he gets only the best matching from each group.

2007-12-12  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Allow localized queries by adding a "language"
	  field to the data structure and calling foomatic-perl-data with
	  an appropriate "-l" option.

	* foomatic-perl-data.c: Fixed "-l" option, with "-l" the debug mode
	  was always activated.

2007-12-11  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added new XML tags "<licensetext>" (full
	  text of the license), "<locales>" (locales for which this driver
	  is recommended), "<requires>" (drivers which are required to be
	  on the system to run this driver), and "<packages>" (explicit
	  listing of downloadable package files). They were introduced to
	  fulfill demands of the printer manufacturers.

	  Allow internationalization in the "<license>", "<supplier>", and
	  "<supportcontact>" fields.

	  Fixed internationalization. Now it is at first tried to find a
	  text version which matches the user-supplied locale ID exactly,
	  then it is searched for a text version where the supplied locale
	  ID matches at least the language (First two characters), and as
	  last mean english text is shown.
	
2007-10-09  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: The PPD gnerator for CUPS did not list the
	  PPDs correctly on printer names containing a comma (Ubuntu bug
	  #150985).

2007-08-20  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Let margins default to safer values (1/4
	  inch on the left and on the right, 1/2 inch at the top and the
	  bottom) if no margins are defined in the Foomatic database.
	  Before, the default margins were all zero.
